--- a/nasdaq-100-10k-montecarlo.ipynb.ipynb
+++ b/nasdaq-100-10k-montecarlo.ipynb.ipynb
@@ -292,7 +292,18 @@
       "Simulating: TSLA\n",
       "Simulating: EA\n",
       "Simulating: MRVL\n",
-      "Simulating: REGN\n"
+      "Simulating: REGN\n",
+      "Simulating: VRSK\n",
+      "Simulating: META\n",
+      "Simulating: ADI\n",
+      "Simulating: MDLZ\n",
+      "Simulating: TXN\n",
+      "Simulating: AVGO\n",
+      "Simulating: BKNG\n",
+      "Simulating: ADP\n",
+      "Simulating: ORLY\n",
+      "Simulating: ROST\n",
+      "Simulating: MNST\n"
      ]
     }
    ],
